syntax = "proto3";

package runtimeenforcer.agent.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/neuvector/runtime-enforcer/proto/agent/v1;agentv1";

// AgentObserver exposes agent internal state for external components.
service AgentObserver {
  // ListPoliciesStatus returns the status of workload Policies.
  rpc ListPoliciesStatus(ListPoliciesStatusRequest) returns (ListPoliciesStatusResponse) {}

  // ScrapeViolations drains the agent's in-memory violation buffer and
  // returns all accumulated records since the last scrape.
  rpc ScrapeViolations(ScrapeViolationsRequest) returns (ScrapeViolationsResponse) {}
}

message ListPoliciesStatusRequest {}

enum PolicyState {
  POLICY_STATE_UNSPECIFIED = 0;

  // Policy present, loaded and actively running.
  POLICY_STATE_READY = 1;

  // Agent attempted to load/apply policy and it failed.
  POLICY_STATE_ERROR = 2;
}

enum PolicyMode {
  POLICY_MODE_UNSPECIFIED = 0;

  // Policy monitor mode
  POLICY_MODE_MONITOR = 1;

  // Policy protect mode
  POLICY_MODE_PROTECT = 2;
}

message PolicyStatus {
  PolicyState state = 1;
  PolicyMode mode = 2;
}

message ListPoliciesStatusResponse {
  map<string, PolicyStatus> policies = 1;
}

message ScrapeViolationsRequest {}

message ViolationRecord {
  google.protobuf.Timestamp timestamp = 1;
  string pod_name = 2;
  string container_name = 3;
  string executable_path = 4;
  string node_name = 5;
  string action = 6;
  string policy_name = 7;
  uint32 count = 8;
}

message ScrapeViolationsResponse {
  repeated ViolationRecord violations = 1;
}
